[package]
name = "pong_rust"
version = "1.0.0"
edition = "2024"

[dependencies]
macroquad = {version = "0.4.14", features = ["audio"] }
pollster = "0.4.0"
rand = "0.10.0"
tao = "0.35.0"
wgpu = "23"
glyphon = "0.7.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
incremental = false
